Findbugs Warning: Write to static field,  use Integer.valueOf